--- a/infrastructure/cloudformation/main-stack.yaml
+++ b/infrastructure/cloudformation/main-stack.yaml
@@ -27,6 +27,11 @@ Parameters:
     Description: Domain name for the application (e.g., motiv8me.io)
     Default: ''
 
+  ApiDomainName:
+    Type: String
+    Description: API domain name for the application (e.g., api.motiv8me.io)
+    Default: ''
+
   GoogleClientId:
     Type: String
     Description: Google OAuth Client ID
@@ -376,7 +381,7 @@ Resources:
           "JWT_SECRET_KEY": "${AWS::StackId}",
           "GOOGLE_CLIENT_ID": "${GoogleClientId}",
           "GOOGLE_CLIENT_SECRET": "${GoogleClientSecret}",
-          "GOOGLE_REDIRECT_URI": "https://${DomainName}/auth/callback",
+          "GOOGLE_REDIRECT_URI": "https://${ApiDomainName}/auth/callback",
           "FRONTEND_URL": "https://${DomainName}",
           "SMTP_HOST": "smtp.gmail.com",
           "SMTP_PORT": "587",
