--- a/motiv8-be/requirements.txt
+++ b/motiv8-be/requirements.txt
@@ -18,6 +18,7 @@ numpy>=1.24.0
 # --- Vision / Face ---
 opencv-python>=4.8.0
 insightface>=0.7.3
+rembg>=2.0.50
 
 # --- Database / Auth ---
 sqlalchemy>=2.0.0
